<resources>
    <string name="app_name">ملک ارومیه</string>

    <string name="tedpermission_setting">تنظیمات</string>
    <string name="tedpermission_close">بستن</string>
    <string name="tedpermission_confirm">تایید</string>

    <string name="toast_message">پیام هشدار</string>
    <string name="connection_error">خطا در برقراری ارتباط با سرور</string>
    <string name="space_scrolling_view_behavior">com.luseen.spacenavigation.SpaceNavigationViewBehavior</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="just_now">همین الان</string>

    <string name="hello_world">Hello world!</string>
    <string name="text_home">item 1</string>
    <string name="text_category">item 2</string>
    <string name="text_search">item 3</string>

    <string name="listview_header_hint_normal">بروزرسانی لیست</string>
    <string name="nomore_loading">همه آگهی ها بارگذاری شده اند.</string>
    <string name="refreshing">در حال بروزرسانی...</string>
    <string name="refresh_done">اتمام بروزرسانی</string>
    <string name="loading_done">اتمام بارگذاری</string>
    <string name="listview_loading">بروزرسانی لیست</string>
    <string name="listview_header_last_time">آخرین بروزرسانی：</string>
    <string name="listview_header_hint_release">آخرین بروزرسانی：</string>

    <string name="permission_rationale_title">جهت عملکرد صحیح نرم افزار دسترسی به این مجورها باید توسط شما تایید شود.</string>
    <string name="permission_rationale_message">جهت عملکرد صحیح نرم افزار دسترسی به این مجورها باید توسط شما تایید شود.</string>
    <string name="permission_rationale_settings_button_text">تنظیمات</string>


    <string name="title_activity_temp">صفحه نمایش</string>
    <string name="yesterday">دیروز</string>
    <string name="tomorrow">فردا</string>
    <string name="today">امروز</string>
    <string name="ago">قبل</string>
    <string name="hour">ساعت</string>
    <string name="few_seconds_ago">چند ثانیه پیش</string>
    <string name="seconds"> ثانیه </string>
    <string name="minutes"> دقیقه </string>
    <string name="days"> روز </string>
    <string name="weeks"> هفته </string>
    <string name="now"> همین حالا </string>
    <string name="all_permissions_denied_feedback">جهت عملکرد صحیح نرم افزار دسترسی به این مجورها باید توسط شما تایید شود.</string>

    <string name="ms_back">قبلی</string>
    <string name="ms_next">بعدی</string>
    <string name="ms_complete">اتمام</string>
    <string name="insert_order_title">ارسال آگهی</string>
    <string name="insert_order_select_category">انتخاب دسته بندی</string>
    <string name="general_price_hint">قیمت (300,000 تومان)</string>
    <string name="general_price_to_hint">قیمت (2,000,000 تومان)</string>
    <string name="general_type_hint">نوع</string>
    <string name="general_email_hint">ایمیل (الزامی نیست)</string>
    <string name="general_select_image_text">انتخاب</string>
    <string name="general_tel_hint">مثال 09121111111</string>
    <string name="general_title_hint">عنوان آگهی خود را وارد نمایید.</string>
    <string name="general_desc_hint">توضیحات آگهی</string>
    <string name="amlak_metraj_hint">متراژ</string>
    <string name="amlak_price_hint">قیمت کل</string>
    <string name="amlak_type_hint">نوع آگهی دهنده</string>
    <string name="amlak_otagh_hint">تعداد اتاق</string>
    <string name="amlak_homeshahr_hint">حومه شهر</string>
    <string name="amlak_vadieh_hint">ودیعه</string>
    <string name="amlak_ejareh_hint">اجاره ماهیانه</string>
    <string name="amlak_sanad_hint">سند اداری</string>
    <string name="amlak_type_shakhsi_hint">شخصی</string>
    <string name="amlak_type_moshaver_hint">مشاور املاک</string>
    <string name="amlak_type_label">نوع آگهی دهنده</string>
    <string name="amlak_sanad_yes_hint">دارد</string>
    <string name="amlak_sanad_no_hint">ندارد</string>
    <string name="naghliye_brand_hint">برند و مدل خودرو</string>
    <string name="naghliye_kardkard_hint">کارکرد</string>
    <string name="catehory_selector_progress_label">در حال بارگذاری</string>


    <string name="pick_image_from_gallery">انتخاب تصویر از گالری</string>
    <string name="text_images">%1$d تصاویر</string>
    <string name="text_button_done">اتمام</string>
    <string name="text_title_activity_album">انتخاب تصاویر</string>
    <string name="text_title_dialog_sort_by_album">مرتب سازی بر اساس</string>
    <string name="text_title_dialog_sort_by_photo">Sort photo by</string>
    <string name="action_sort">Sort</string>
    <string name="brand_prompt">انتخاب برند</string>

    <string name="amlak_homeshahr_yes_label">هست</string>
    <string name="amlak_homeshahr_no_label">نیست</string>

    <string-array name="naghliye_sal">
        <item>1360</item>
        <item>1361</item>
        <item>1362</item>
        <item>1363</item>
        <item>1364</item>
        <item>1365</item>
        <item>1366</item>
        <item>1367</item>
        <item>1368</item>
        <item>1369</item>
        <item>1370</item>
        <item>1371</item>
        <item>1372</item>
        <item>1373</item>
        <item>1374</item>
        <item>1375</item>
        <item>1376</item>
        <item>1377</item>
        <item>1378</item>
        <item>1379</item>
        <item>1380</item>
        <item>1381</item>
        <item>1382</item>
        <item>1383</item>
        <item>1384</item>
        <item>1385</item>
        <item>1386</item>
        <item>1387</item>
        <item>1388</item>
        <item>1389</item>
        <item>1390</item>
        <item>1391</item>
        <item>1392</item>
        <item>1393</item>
        <item>1394</item>
        <item>1395</item>
        <item>1396</item>
    </string-array>

    <item name="category_list" type="id" />
    <item name="_id" type="id" />

    <string name="dialog_default_title">پیاگ هشدار</string>
    <string name="dialog_ok">تایید</string>
    <string name="dialog_cancel">انصراف</string>
    <string name="LOADING">در حال بارگذاری</string>


    <string name="default_progressbar">بروزرسانی :</string>
    <string name="spinner_promp">بروزرسانی :</string>

    <!-- empty view -->
    <string name="emptyview_loading">در حال بارگزاری …</string>
    <string name="emptyview_error_unknown">خطا در پردازش درخواست شما</string>
    <string name="emptyview_error_connection_not_found">ارتباط اینترنتی خود را چک کنید.</string>
    <string name="emptyview_error_connection_timeout">خطا در ارتباط با سرور</string>
    <string name="emptyview_error_endpoint">خطا در ارتباط با سرور</string>
    <string name="empty">آگهی در این بخش وجود ندارد.</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="error_unknown">خطای ناشناخته بوجود آمد.</string>
    <string name="loading">در حال بارگذاری</string>
    <string name="fontpath">fonts/IRANSans-web.ttf</string>
    <string name="all_order_label">همه آگهی ها</string>
    <string name="category_tab_label">دسته بندیها</string>
    <string name="add_order_label">افزودن آگهی</string>
    <string name="search_tab_label">جستجو</string>
    <string name="profile_tab_label">آگهی من</string>
    <string name="rationale_title">صدور مجوز دسترسی</string>
    <string name="rationale_message">جهت کارکرد صحیح نرم افزار مجوزهای لازم را تایید کنید.</string>

    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">چرخش(چپ)</string>
    <string name="crop_image_menu_rotate_right">چرخش(راست)</string>
    <string name="crop_image_menu_crop">برش</string>
    <string name="pick_image_intent_chooser_title">انتخاب تصویر</string>
    <string name="saving_image">در حال ذخیره تصویر...</string>
    <string name="contact_str">
        <![CDATA[
    <div >
    <strong>تلفن دفتر :</strong>
    <p>۰۹۱۴۴۳۹۸۲۰۰ - ۰۴۴۳۳۴۸۱۵۰۷</p>
    <strong >کارشناس فروش :</strong>
    <p>۰۹۲۲۰۶۳۵۷۰۵</p>
    <strong>مدیریت :</strong>
    <p>۰۹۱۴۳۴۳۶۶۵۷</p>
    </div>
    ]]>
    </string>
    <string name="general_address_hint">آدرس خود را وارد کنید (الزامی نیست)</string>


    <string name="easy_native_dialog_btn_ok">تایید</string>
    <string name="easy_native_dialog_btn_cancel">انصراف</string>
    <string name="easy_native_dialog_btn_option">تنظیمات</string>
    <string name="general_metraj_hint">متراژ مورد نظر را وارد نمایید.</string>
    <string name="general_otagh_hint">تعداد اتاق مورد نظر را وارد کنید.</string>
    <string name="map_token">pk.eyJ1IjoidG1lZGlhYSIsImEiOiJjam94M2R2azAxeWFqM3ZwYWV5b2NzZm93In0.arkN4gsF3_t-I_vpCuH-LQ</string>
    <string name="topbar_filter_area"> منطقه</string>
    <string name="topbar_filter_type">دسته بندی</string>
    <string name="topbar_filter_price">محدوده قیمت</string>


    <string name="about_us"><![CDATA[
    <p>مِلک ارومیه، سامانه‌ای برای خرید، فروش و اجاره انواع مِلک (مسکونی و تجاری) و حتی باغ و ویلا می‌باشد</p>
    <p>تمامی حقوق برای ملک ارومیه و آژانس املاک آسمان محفوظ است.</p>
    <a href="http://www.melkeurmia.ir">WWW.MELKEURMIA.IR</a><br/>
    <a href="http://www.melkeurmia.com">WWW.MELKEURMIA.COM</a>
    <p>اگر قصد خرید یا فروش، اجاره کردن یا اجاره دادن یک آپارتمان، ویلا، زمین، دفتر کار و یا مغازه را دارید؛</p>
    <p>اگر می‌خواهید در کوتاه‌ترین زمان، مِلک دلخواه خود را پیدا کنید؛</p>
    <p>اگر می‌خواهید مشتری در سراسر کشور مشخصات مِلک شما را مشاهده کرده و برای خرید یا اجاره آن اقدام نماید؛</p>
    <p>اولین اپلیکیشن تخصصی مِلک ارومیه را در گوشی تلفن های(اندروید) همراهتان نصب کنید.</p>
    <p>تمام مشاورین املاک باپروانه کسب نیزمیتوانندمواردخودرابه بسته مدیریتی خودسپرده واقدام خریدوفروش دراملاک خودنمایند.</p>
    <p>کارشناسان مِلک ارومیه با مدیریت املاک آسمان، با کادری مجرب متشکل از کارشناسان مجرب و حقوقی آماده ارائه خدمات می باشند.</p>
    <p>*** توجه داشته باشید برای اولین اجرای برنامه اتصال به اینترنت نیاز دارید</p>
    <h2>امکانات نرم‌افزار </h2>
    <p>• جستجوی مِلک بر اساس نوع ملک، منطقه، متراژ، قیمت و </p>
    <p>• سپردن رایگان مِلک برای فروش یا اجاره</p>
    <p>• ثبت رایگان تقاضای خرید یا اجاره مِلک</p>
    <p>• مدیریت آگهی توسط آگهی دهنده ویرایش، حذف</p>
    <p>• نمایش اطلاعات مِلک با جزئیات به همراه تصاویر و فیلم</p>
    <p>• نمایش موقعیت جغرافیایی مِلک و موقعیت فعلی کاربر بر روی نقشه</p>
    <h2>قوانین ومقرارت :</h2>
    <p>تمام مواردومقرارت این اپلکشین براساس مقرارت مدون کشورجمهوری اسلامی ایران میباشد.</p>
    <p>درج هرگونه آگهی خلاف واقع وجعلی در مصداق جرم تلقی میشود.</p>
    ]]></string>

</resources>
