<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/topbar_filter_area_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/topbar_filter_btn"
            android:drawableRight="@drawable/filter_location_icon"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:text="@string/topbar_filter_area"
            android:maxLines="1"
            android:layout_marginLeft="10dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/topbar_filter_category_btn"
            android:layout_width="0dip"
            android:background="@drawable/topbar_filter_btn"
            android:drawableRight="@drawable/filter_category_icon_w"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/topbar_filter_type"
            android:layout_marginLeft="10dp"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/topbar_filter_price_btn"
            android:background="@drawable/topbar_filter_btn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/filter_price_icon"
            android:paddingRight="10dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/topbar_filter_price"
            android:layout_marginLeft="10dp"/>
        <ImageButton
            android:id="@+id/remove_filter_btn"
            android:background="@drawable/button_background"
            android:src="@android:drawable/ic_input_delete"
            android:rotationY="180"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight=".3"
            android:minWidth="0dp"
            style="@style/ButtonStyle"
            android:includeFontPadding="false"/>
    </LinearLayout>



    <com.santalu.emptyview.EmptyView
        android:id="@+id/error_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:emptyDrawable="@drawable/ic_sentiment_dissatisfied"
        app:emptyDrawableTint="@color/colorPrimary"
        app:emptyGravity="center"
        app:emptyText="@string/empty"
        app:errorBackgroundColor="@color/red_btn_bg_color"
        app:errorButtonBackgroundColor="@color/white"
        app:errorButtonText="@string/try_again"
        app:errorButtonTextColor="@color/black"
        app:errorDrawable="@drawable/ic_sentiment_very_dissatisfied"
        app:errorDrawableTint="@color/white"
        app:errorText="@string/error_unknown"
        app:errorTextColor="@color/white"
        app:loadingDrawable="@drawable/ic_sentiment_satisfied"
        app:loadingStyle="circular"
        app:loadingText="@string/loading"
        app:loadingTint="@color/colorPrimary">

        <com.jcodecraeer.xrecyclerview.XRecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </com.santalu.emptyview.EmptyView>

</LinearLayout>